Updated Profile picture path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="E:\WebDevelopment_Bootcamp\Web Development\Images\Shahidavali-modified.png" alt="Shahidavali Profie Picture" width="150" height="150"></td>
+      <td><img src="Shahidavali-modified.png" alt="Shahidavali Profie Picture" width="150" height="150"></td>
       <td>
         <h1>Shahidavali Syed</h1>
         <p><em>Founder and CTO of <strong><a href="https://appbrewery.com/?_ga=2.170123680.1883603742.1663951331-1474138055.1663130931">The App Brewery</a></strong>.</em< /p>
